--- a/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/index.adoc
+++ b/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/index.adoc
@@ -5,8 +5,15 @@ include::overview.adoc[]
 include::SchemaDescriptor.java[tags=doc]
 include::SchemaFileDescriptor.java[tags=doc]
 include::TypeDescriptor.java[tag=doc]
+include::ScalarTypeDescriptor.java[tag=doc]
+include::EnumTypeDescriptor.java[tag=doc]
 include::FieldDescriptor.java[tag=doc]
 include::DirectiveTypeDescriptor.java[tag=doc]
 include::DirectiveValueDescriptor.java[tag=doc]
 include::ArgumentDescriptor.java[tag=doc]
+include::InputValueDefinitionDescriptor.java[tag=doc]
+include::ValueDescriptor.java[tag=doc]
+include::ScalarValueDescriptor.java[tag=doc]
+include::EnumValueDescriptor.java[tag=doc]
+include::OfTypeTemplate.java[tag=doc]
 
