updated GraphQL reference documentation

--- a/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/index.adoc
+++ b/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/index.adoc
@@ -4,16 +4,25 @@ include::introduction.adoc[]
 include::overview.adoc[]
 include::SchemaDescriptor.java[tags=doc]
 include::SchemaFileDescriptor.java[tags=doc]
+include::SchemaUrlDescriptor.java[tags=doc]
 include::TypeDescriptor.java[tag=doc]
+include::ValueDescriptor.java[tag=doc]
 include::ScalarTypeDescriptor.java[tag=doc]
+include::ScalarValueDescriptor.java[tag=doc]
 include::EnumTypeDescriptor.java[tag=doc]
+include::EnumValueDescriptor.java[tag=doc]
+include::InterfaceTypeDescriptor.java[tag=doc]
+include::ObjectTypeDescriptor.java[tag=doc]
 include::FieldDescriptor.java[tag=doc]
+include::OfTypeTemplate.java[tag=doc]
+include::InputObjectTypeDescriptor.java[tag=doc]
+include::InputFieldDescriptor.java[tag=doc]
+include::InputValueDefinitionDescriptor.java[tag=doc]
+include::UnionTypeDescriptor.java[tag=doc]
+include::UnionDeclaresTypeDescriptor.java[tag=doc]
+include::ListTypeDescriptor.java[tag=doc]
+include::OfElementTypeDescriptor.java[tag=doc]
 include::DirectiveTypeDescriptor.java[tag=doc]
 include::DirectiveValueDescriptor.java[tag=doc]
+include::DirectiveLocationDescriptor.java[tag=doc]
 include::ArgumentDescriptor.java[tag=doc]
-include::InputValueDefinitionDescriptor.java[tag=doc]
-include::ValueDescriptor.java[tag=doc]
-include::ScalarValueDescriptor.java[tag=doc]
-include::EnumValueDescriptor.java[tag=doc]
-include::OfTypeTemplate.java[tag=doc]
-
