--- a/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/overview.adoc
+++ b/src/main/java/com/buschmais/jqassistant/plugin/graphql/api/model/overview.adoc
@@ -12,17 +12,27 @@
 
 include::SchemaDescriptor.java[tag=labeloverview]
 include::SchemaFileDescriptor.java[tag=labeloverview]
+include::SchemaUrlDescriptor.java[tag=labeloverview]
 include::TypeDescriptor.java[tag=labeloverview]
-include::ScalarTypeDescriptor.java[tag=overview]
-include::EnumTypeDescriptor.java[tag=overview]
+include::ValueDescriptor.java[tag=labeloverview]
+include::ScalarTypeDescriptor.java[tag=labeloverview]
+include::ScalarValueDescriptor.java[tag=labeloverview]
+include::EnumTypeDescriptor.java[tag=labeloverview]
+include::EnumValueDescriptor.java[tag=labeloverview]
+include::InterfaceTypeDescriptor.java[tag=labeloverview]
+include::ObjectTypeDescriptor.java[tag=labeloverview]
 include::FieldDescriptor.java[tag=labeloverview]
+include::OfTypeTemplate.java[tag=labeloverview]
+include::InputObjectTypeDescriptor.java[tag=labeloverview]
+include::InputFieldDescriptor.java[tag=labeloverview]
+include::InputValueDefinitionDescriptor.java[tag=labeloverview]
+include::UnionTypeDescriptor.java[tag=labeloverview]
+include::ListTypeDescriptor.java[tag=labeloverview]
+include::OfElementTypeDescriptor.java[tag=labeloverview]
 include::DirectiveTypeDescriptor.java[tag=labeloverview]
 include::DirectiveValueDescriptor.java[tag=labeloverview]
+include::DirectiveLocationDescriptor.java[tag=labeloverview]
 include::ArgumentDescriptor.java[tag=labeloverview]
-include::InputValueDefinitionDescriptor.java[tag=labeloverview]
-include::ValueDescriptor.java[tag=labeloverview]
-include::ScalarValueDescriptor.java[tag=overview]
-include::EnumValueDescriptor.java[tag=overview]
 
 |===
 
