Update to org.jqassistant.plugin:parent

--- a/src/main/asciidoc/release-notes.adoc
+++ b/src/main/asciidoc/release-notes.adoc
@@ -5,3 +5,6 @@
 
 * Added scanners for GraphQL schema files and URL introspection
 
+== 2.0.0
+
+* Moved Plugin from com.buschmais.jqassistant.plugin (core-Distribution) to org.jqassistant.plugin
