--- a/readme.adoc
+++ b/readme.adoc
@@ -1,3 +1,36 @@
 = jQAssistant GraphQL Plugin
 
-The project provides a http://jqassistant.org/[jQAssistant] plugin for GraphQL
+The project provides a http://jqassistant.org/[jQAssistant] plugin for GraphQL.
+
+== Using the jqassistant-graphql-plugin
+
+NOTE:: Starting from jqassistant-graphql-plugin v2.0.0, the GraphQL-Plugin resides under jqassistant-plugin.
+Therefore, not only the repository location changed but also group id and artifact id were adapted from `com.buschmais.jqassistant.plugin:graphql` to `org.jqassistant.plugin:jqassistant-graphql-plugin`.
+
+NOTE:: From jQAssistant v2.0.0 onwards, it is not part of the core distribution anymore and a manual configuration as shown below is required.
+
+[source, xml]
+----
+<plugin>
+    <groupId>com.buschmais.jqassistant</groupId>
+    <artifactId>jqassistant-maven-plugin</artifactId>
+    <version>${jqassistant.version}</version>
+    <executions>
+        <execution>
+            <id>default-cli</id>
+            <goals>
+                <goal>scan</goal>
+                <goal>analyze</goal>
+            </goals>
+        </execution>
+    </executions>
+    <dependencies>
+        <dependency> // <1>
+            <groupId>org.jqassistant.plugin</groupId>
+            <artifactId>jqassistant-graphql-plugin</artifactId>
+            <version>${jqassistant.graphql-plugin.version}</version>
+        </dependency>
+    </dependencies>
+</plugin>
+----
+<1> Dependency to the GraphQL plugin
