--- a/readme.adoc
+++ b/readme.adoc
@@ -18,3 +18,13 @@ jqassistant:
       version: ${jqassistant.graphql-plugin.version}
 ----
 <1> Dependency to the GraphQL plugin
+
+== Changelog
+
+=== 1.9.0
+
+- Added scanners for GraphQL schema files and URL introspection
+
+=== 2.0.0
+
+- Moved Plugin from com.buschmais.jqassistant.plugin (core-Distribution) to org.jqassistant.plugin
